2024-12-11 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/f8/gen.c,
	  src/f8/peeph.def:
	  Improve code for f8 bit-field access. Improve code for f8 extended stack access.

2024-12-11 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/f8/main.c,
	  src/f8/gen.c:
	  Improve f8 codegen for rotations.

2024-12-10 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/f8/gen.c:
	  f8 carry bit caching fix. Some f8 code generation improvements.

2024-12-10 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/f8/peeph.def:
	  Optimize out some more redundant loads for f8.

2024-12-08 Philipp Klaus Krause <philipp@colecovision.eu>

	* device/lib/f8/_modsint.s,
	  device/lib/f8/_moduint.s,
	  device/lib/f8/Makefile.in,
	  device/lib/f8/_divsint.s,
	  device/lib/f8/_divuint.s:
	  Improve f8 modulo support routines.

2024-12-07 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/f8/gen.c:
	  f8 codegen improvements.
	* src/stm8/gen.c:
	  stm8 codegen improvements for some reads of signed bit-fields.
	* src/f8/peeph.def,
	  src/f8/peep.c:
	  f8 optimizations for string handling.

2024-12-06 Philipp Klaus Krause <philipp@colecovision.eu>

	* device/lib/f8/_divuint.s,
	  src/f8/peeph.def:
	  Save a few bytes in f8 division support routines.
	* src/f8/gen.c:
	  f8 codegen improvements.

2024-02-29 Gabriele Gorla <gorlik@yahoo.com>

	* doc/sdccman.lyx:
      additional documentation for the MOS6502 port. Addresses:
      - bug #3749
      - bug #3787
      - support req #199
      - feature request #931

2024-12-05 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/f8/gen.c:
	  Improve f8 codegen for some operations.

2024-12-03 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/tests/largeoddstruct.c.in:
	  Disable test for host, since we can't assume C23 support in host compilers yet. Disable for -mmcs51 --stack-auto, due to bug #3804.

2024-12-02 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/f8/gen.c,
	  src/stm8/gen.c,