@@ -97,8 +97,8 @@ Software Foundation, 59 Temple Place - Suite 330, Boston, MA
 #define XCH_A_NSP	instruction_91
 #define XCH_A_Y		instruction_92
 #define XCH_A_A		instruction_93
-#define XCHW_Y_Z	instruction_f4
-#define XCHW_Z_NSP	instruction_f5
+#define XCHW_X_Y	instruction_f4
+#define XCHW_Y_NSP	instruction_f5
 
 #define CAX		instruction_9b
 #define CAXW		instruction_f9
