@@ -326,27 +326,27 @@ cl_f8::XCH_A_A(t_mem code)
 }
 
 int
-cl_f8::XCHW_Y_Z(t_mem code)
+cl_f8::XCHW_X_Y(t_mem code)
 {
-  u16_t t= read_addr(rom, rZ);
+  u16_t t= read_addr(rom, acc16->get());
   vc.rd+= 2;
-  rom->write(rZ  , rYL);
-  rom->write(rZ+1, rYH);
+  rom->write(acc16->get()  , (rop16->get() >> 0) & 0xff);
+  rom->write(acc16->get()+1, (rop16->get() >> 8) & 0xff);
   vc.wr+= 2;
-  cY.W(t);
+  rop16->W(t);
   return resGO;
 }
 
 int
-cl_f8::XCHW_Z_NSP(t_mem code)
+cl_f8::XCHW_Y_NSP(t_mem code)
 {
   u16_t a= a_n_sp();
   u16_t t= read_addr(rom, a);
   vc.rd+= 2;
-  rom->write(a  , rZL);
-  rom->write(a+1, rZH);
+  rom->write(a  , (acc16->get() >> 0) & 0xff);
+  rom->write(a+1, (acc16->get() >> 8) & 0xff);
   vc.wr+= 2;
-  cZ.W(t);
+  acc16->W(t);
   return resGO;
 }
 
